--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -84,9 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1' '2' 'test'] <U21\n",
+      "[1. 2. 3.] float64\n"
+     ]
+    }
+   ],
    "source": [
     "# 다른 데이터 타입에 list를 넘파이로 변경\n",
     "list2=[1,2,'test']\n",
@@ -99,6 +108,93 @@
     "print(array3,array3.dtype)\n",
     "# 마찬가지로 3.0 float 값으로 나온다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3.] float64\n",
+      "[1 2 3] int32\n",
+      "[1 2 3] int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터 타입 변경 (astype(\"\"))\n",
+    "array_int=np.array([1,2,3])\n",
+    "array_float=array_int.astype(\"float64\")\n",
+    "print(array_float,array_float.dtype)\n",
+    "\n",
+    "array_int1=array_float.astype(\"int32\")\n",
+    "print(array_int1,array_int1.dtype)\n",
+    "\n",
+    "array_float1=np.array([1.1,2.1,3.1])\n",
+    "array_int2=array_float.astype(\"int32\")\n",
+    "print(array_int2,array_int2.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "int64 (10,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sequence_array=np.arange(10)\n",
+    "print(sequence_array)\n",
+    "print(sequence_array.dtype,sequence_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "int32 (3, 2)\n",
+      "[[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]]\n",
+      "float64 (3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "zero_array=np.zeros((3,2),dtype=\"int32\")\n",
+    "# defalut 값은 float64\n",
+    "print(zero_array)\n",
+    "print(zero_array.dtype,zero_array.shape)\n",
+    "\n",
+    "one_array=np.ones((3,2))\n",
+    "print(one_array)\n",
+    "print(one_array.dtype,one_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
