--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -191,6 +191,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1:\n",
+      " [0 1 2 3 4 5 6 7 8 9]\n",
+      "array2:\n",
+      " [[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "array3:\n",
+      " [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ndarray의 차원과 크기를 변경하는 reshape()\n",
+    "array1=np.arange(10)\n",
+    "print(\"array1:\\n\",array1)\n",
+    "array2=array1.reshape(2,5)\n",
+    "print(\"array2:\\n\",array2)\n",
+    "array3=array1.reshape(5,2)\n",
+    "print(\"array3:\\n\",array3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1:\n",
+      " [0 1 2 3 4 5 6 7 8 9]\n",
+      "array2:\n",
+      " [[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "array3:\n",
+      " [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshape 인자를 -1로 두면 효율적이다\n",
+    "array1=np.arange(10)\n",
+    "print(\"array1:\\n\",array1)\n",
+    "array2=array1.reshape(-1,5)\n",
+    "print(\"array2:\\n\",array2)\n",
+    "array3=array1.reshape(5,-1)\n",
+    "print(\"array3:\\n\",array3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array3d:\n",
+      " [[[0, 1], [2, 3]], [[4, 5], [6, 7]]]\n",
+      "array5:\n",
+      " [[0], [1], [2], [3], [4], [5], [6], [7]]\n",
+      "array5 shape (8, 1)\n",
+      "array6:\n",
+      " [[0], [1], [2], [3], [4], [5], [6], [7]]\n",
+      "array6 shape (8, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshape(-1,1)은 3차원을 2차원으로, 1차원은 2차원으로 변경해준다.\n",
+    "array1=np.arange(8)\n",
+    "array3d=array1.reshape((2,2,2))\n",
+    "print(\"array3d:\\n\",array3d.tolist()) #리스트로 변환\n",
+    "\n",
+    "#3차원 ndarray를 2차원 ndarray로 변환\n",
+    "array5=array3d.reshape(-1,1)\n",
+    "print(\"array5:\\n\",array5.tolist())\n",
+    "print(\"array5 shape\",array5.shape)\n",
+    "\n",
+    "#1차원 ndarray를 2차원 ndarray로 변환\n",
+    "array6=array1.reshape(-1,1)\n",
+    "print(\"array6:\\n\",array6.tolist())\n",
+    "print(\"array6 shape\",array6.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1: [1 2 3 4 5 6 7 8 9]\n",
+      "value = 3\n",
+      "<class 'numpy.int64'>\n",
+      "맨 뒤의 값: 9 맨 뒤에서 두번째 값: 8\n",
+      "array1: [9 2 3 4 5 6 7 8 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 값 추출하기\n",
+    "array1=np.arange(start=1,stop=10)\n",
+    "print(\"array1:\",array1)\n",
+    "value=array1[2]\n",
+    "print(\"value =\",value)\n",
+    "print(type(value))\n",
+    "print(\"맨 뒤의 값:\",array1[-1], \"맨 뒤에서 두번째 값:\",array1[-2])\n",
+    "\n",
+    "# 수정하기\n",
+    "array1[0]=9\n",
+    "array1[8]=0\n",
+    "print(\"array1:\",array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "(row=0, col=0) index 가리키는 값 1\n",
+      "(row=0, col=1) index 가리키는 값 2\n",
+      "(row=1, col=0) index 가리키는 값 4\n",
+      "(row=2, col=2) index 가리키는 값 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# row, column 값 추출\n",
+    "array1d=np.arange(start=1, stop=10)\n",
+    "array2d=array1d.reshape(3,3)\n",
+    "print(array2d)\n",
+    "print(\"(row=0, col=0) index 가리키는 값\",array2d[0,0])\n",
+    "print(\"(row=0, col=1) index 가리키는 값\",array2d[0,1])\n",
+    "print(\"(row=1, col=0) index 가리키는 값\",array2d[1,0])\n",
+    "print(\"(row=2, col=2) index 가리키는 값\",array2d[2,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
