--- a/numpy1.ipynb
+++ b/numpy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +352,239 @@
     "print(\"(row=0, col=1) index 가리키는 값\",array2d[0,1])\n",
     "print(\"(row=1, col=0) index 가리키는 값\",array2d[1,0])\n",
     "print(\"(row=2, col=2) index 가리키는 값\",array2d[2,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[4 5 6 7 8 9]\n",
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 슬라이싱\n",
+    "array1=np.arange(start=1,stop=10)\n",
+    "array4=array1[:3]\n",
+    "print(array4)\n",
+    "\n",
+    "array5=array1[3:]\n",
+    "print(array5)\n",
+    "\n",
+    "array6=array1[:]\n",
+    "print(array6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array2d:\n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[0:2,0:2]\n",
+      " [[1 2]\n",
+      " [4 5]]\n",
+      "array2d[1:3,0:3]\n",
+      " [[4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[1:3,:]\n",
+      " [[4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[:,:]\n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "array2d[:2,1:]\n",
+      " [[2 3]\n",
+      " [5 6]]\n",
+      "array2d[:2,0]\n",
+      " [1 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1d=np.arange(start=1,stop=10)\n",
+    "array2d=array1d.reshape(3,3)\n",
+    "print(\"array2d:\\n\",array2d)\n",
+    "\n",
+    "print(\"array2d[0:2,0:2]\\n\",array2d[0:2,0:2])\n",
+    "print(\"array2d[1:3,0:3]\\n\",array2d[1:3,0:3])\n",
+    "print(\"array2d[1:3,:]\\n\",array2d[1:3,:])\n",
+    "print(\"array2d[:,:]\\n\",array2d[:,:])\n",
+    "print(\"array2d[:2,1:]\\n\",array2d[:2,1:])\n",
+    "print(\"array2d[:2,0]\\n\",array2d[:2,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array2d[0,1],2] =  [3, 6]\n",
+      "array2d[0,1],0:2] = [[1, 2], [4, 5]]\n",
+      "array2d[0,1]] = [[1, 2, 3], [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#팬시 인덱싱\n",
+    "array1d=np.arange(start=1,stop=10)\n",
+    "array2d=array1d.reshape(3,3)\n",
+    "\n",
+    "array3=array2d[[0,1],2]\n",
+    "print(\"array2d[0,1],2] = \",array3.tolist())\n",
+    "\n",
+    "array4=array2d[[0,1],0:2]\n",
+    "print(\"array2d[0,1],0:2] =\",array4.tolist())\n",
+    "\n",
+    "array5=array2d[[0,1]]\n",
+    "print(\"array2d[0,1]] =\",array5.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1d>5 불린 인덱싱 결과 값 [6 7 8 9]\n",
+      "일반 인덱싱으로 필터링 결과 [6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 불린 인덱싱\n",
+    "array1d=np.arange(start=1,stop=10)\n",
+    "array3=array1d[array1d>5]\n",
+    "print(\"array1d>5 불린 인덱싱 결과 값\",array3)\n",
+    "\n",
+    "indexes=np.array([5,6,7,8]) # 오우 인덱싱은 자리값이다,, 주의 바란다!\n",
+    "array4=array1d[indexes]\n",
+    "print(\"일반 인덱싱으로 필터링 결과\",array4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 행렬: [3 1 9 5]\n",
+      "np.sort() 호출 후 반환된 정렬 행렬: [1 3 5 9]\n",
+      "np.sort() 호출 후 원본 행렬: [3 1 9 5]\n",
+      "org_array.sort() 호출 후 반환된 행렬: None\n",
+      "org_array.sort() 호출 후 원본 행렬: [1 3 5 9]\n",
+      "내림차순으로 정렬: [9 5 3 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정렬\n",
+    "org_array=np.array([3,1,9,5])\n",
+    "print(\"원본 행렬:\",org_array)\n",
+    "\n",
+    "# np.sort()로 정렬 원본을 해치지 않음\n",
+    "sort_array1=np.sort(org_array)\n",
+    "print(\"np.sort() 호출 후 반환된 정렬 행렬:\",sort_array1)\n",
+    "print(\"np.sort() 호출 후 원본 행렬:\",org_array)\n",
+    "\n",
+    "# ndarray.sort()로 정렬 원본 자체를 바꾸어버림\n",
+    "sort_array2=org_array.sort()\n",
+    "print(\"org_array.sort() 호출 후 반환된 행렬:\",sort_array2)\n",
+    "print(\"org_array.sort() 호출 후 원본 행렬:\",org_array)\n",
+    "\n",
+    "# 내림 차순\n",
+    "sort_array1_desc=np.sort(org_array)[::-1] \n",
+    "print(\"내림차순으로 정렬:\",sort_array1_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 2 3]\n",
+      "<class 'numpy.ndarray'>\n",
+      "[3 2 0 1]\n",
+      "성적 오름차순 정렬 시 socre_array의 인덱스: [0 2 4 1 3]\n",
+      "성적 오름차순으로 name_array의 이름 출력: ['John' 'Sarah' 'Samuel' 'Mike' 'Kate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정렬된 행렬의 인덱스를 반환하기\n",
+    "org_array=np.array([3,1,5,9])\n",
+    "sort_indices=np.argsort(org_array)\n",
+    "print(sort_indices)\n",
+    "print(type(sort_indices))\n",
+    "sort_indices_desc=np.argsort(org_array)[::-1]\n",
+    "print(sort_indices_desc)\n",
+    "\n",
+    "# 넘파이는 키 즉 같은 데이터 타입만 써야하기 때문에 자주 쓰인다.\n",
+    "name_array=np.array(['John','Mike','Sarah','Kate','Samuel'])\n",
+    "score_array=np.array([78,95,84,98,88]) # 내가 반대로 생각했다,\n",
+    "sort_indices_asc=np.argsort(score_array)\n",
+    "print(\"성적 오름차순 정렬 시 socre_array의 인덱스:\",sort_indices_asc)\n",
+    "print(\"성적 오름차순으로 name_array의 이름 출력:\",name_array[sort_indices_asc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "행렬 내적 결과:\n",
+      " [[ 58  64]\n",
+      " [139 154]]\n",
+      "A의 전치 행렬\n",
+      " [[1 3]\n",
+      " [2 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 행렬 내적 np.dot(A,B)\n",
+    "A=np.array([[1,2,3],[4,5,6]])\n",
+    "B=np.array([[7,8],[9,10],[11,12]])\n",
+    "dot_product=np.dot(A,B)\n",
+    "print(\"행렬 내적 결과:\\n\",dot_product)\n",
+    "\n",
+    "# 전치 행렬 np.transpose(A)\n",
+    "A=np.array([[1,2],[3,4]])\n",
+    "transpose_mat=np.transpose(A)\n",
+    "print(\"A의 전치 행렬\\n\",transpose_mat)"
    ]
   },
   {
